Option to give Item Frames
There is now an option in config.yml called "giveItemFrames" that when set to true, will give the player who runs the command the same amount of item frames as maps

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,3 +8,6 @@ maxX: 12
 #Maximum number to maps which an image can be split into vertically
 #Default 12
 maxY: 12
+
+#A toggle to give item frames to the player when they receive maps
+giveItemFrames: false
