--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,10 +2,12 @@ name: ImageMapRenderer
 version: '${project.version}'
 main: net.lukesmp.imagemaprenderer.ImageMapRenderer
 api-version: 1.19
-authors: [ SmexyLuke ]
+authors: [ nulLuke ]
 description: A SpigotMC plugin that can take images from the internet and render them on in-game maps
 website: https://www.lukesmp.net
 commands:
   map:
     usage: /map <width> <height> <link>
     description: Renders an image on a map
+#  invisible:
+#    description: Makes a map invisible
