--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,8 @@
-#Change the prefix of messages from the plugin (supports Minecraft color codes)
+#Changes the command used by the player to render maps
+#Default: "map"
+mapCommand: "map"
+
+#Changes the prefix of messages from the plugin (supports Minecraft color codes)
 #Default: "&3Custom Image Maps&r&7&k | "
 prefix: "&3Custom Image Maps&r&7&k | "
 
