--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: ImageMapRenderer
 version: '${project.version}'
 main: net.lukesmp.imagemaprenderer.ImageMapRenderer
 api-version: 1.19
-authors: [ nulLuke ]
+authors: [ CalcWIZ ]
 description: A SpigotMC plugin that can take images from the internet and render them on in-game maps
 website: https://www.lukesmp.net
 commands:
