--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,8 +10,10 @@ commands:
     usage: /map <width> <height> <link>
     description: Renders an image on a map
     permission: imagemaprenderer.map
-#  invisible:
-#    description: Makes a map invisible
+  invisible:
+    usage: /invisible
+    description: Makes a map invisible
+    permission: imagemaprenderer.invisible
 permissions:
   imagemaprenderer.map:
     description: allows player to run the /map command
