--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,11 +3,11 @@ version: '${project.version}'
 main: net.lukesmp.imagemaprenderer.ImageMapRenderer
 api-version: 1.19
 authors: [ CalcWIZ ]
-description: A SpigotMC plugin that can take images from the internet and render them on in-game maps
+description: A SpigotMC plugin that can take images from the internet and renders them on in-game maps
 website: https://www.lukesmp.net
 commands:
   map:
-    usage: /map <width> <height> <link>
+    usage: /map <width> <height> <link> <frame>
     description: Renders an image on a map
     permission: imagemaprenderer.map
 #  invisible:
@@ -16,8 +16,14 @@ commands:
 #    permission: imagemaprenderer.invisible
 permissions:
   imagemaprenderer.map:
-    description: allows players to run the /map command
+    description: allows player to run the /map command
     default: true
 #  imagemaprenderer.invisible:
-#    description: allows players to run the /invisible command
+#    description: allows player to run the /invisible command
 #    default: true
+  imagemaprenderer.itemFrames:
+    description: allows player to receive Item Frames when they render map(s)
+    default: true
+  imagemaprenderer.glowItemFrames:
+    descriptions: allows player to receive Glow Item Frames when they render map(s)
+    default: true
